welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: not found: value equal0k
  return ( (a <= b && b <= c && equal0k) || (a < b && b < c)  )
                                ^