welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
  return ( (a <= b && b <= c && equal0k) || (a < b && b < c)  )
}